--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     // Hilt Navigation
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
+
+    // Pager
+    implementation 'com.google.accompanist:accompanist-pager:0.24.13-rc'
 }
 
 // Allow references to generated code
