--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,13 +74,24 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.45'
     // Hilt Navigation
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation 'androidx.navigation:navigation-compose:2.6.0'
 
     // Pager
     implementation 'com.google.accompanist:accompanist-pager:0.24.13-rc'
 
     // Data Store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // CameraX
+    implementation "androidx.camera:camera-camera2:1.2.3"
+    implementation "androidx.camera:camera-lifecycle:1.2.3"
+    implementation "androidx.camera:camera-view:1.2.3"
+
+    // Icons
+    implementation "androidx.compose.material:material-icons-extended:1.4.3"
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.3.0"
 }
 
 // Allow references to generated code
