--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,19 @@ dependencies {
 
     // Coil
     implementation "io.coil-kt:coil-compose:2.3.0"
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // Gson Converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Google Maps for Compose
+    implementation 'com.google.maps.android:maps-compose:2.11.0'
+    implementation 'com.google.maps.android:maps-utils-ktx:3.4.0'
+
+    // AWS
+    implementation 'com.amplifyframework:core-kotlin:2.8.4'
+    implementation 'com.amplifyframework:aws-auth-cognito:2.8.4'
 }
 
 // Allow references to generated code
