--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.6.0'
 
     // Pager
-    implementation 'com.google.accompanist:accompanist-pager:0.24.13-rc'
+    implementation 'com.google.accompanist:accompanist-pager:0.25.1'
 
     // Data Store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
