--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Dfile.encoding\=UTF-8
+
+android.enableJetifier=true
