--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,6 +126,7 @@ dependencies {
     // Paymob
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     implementation 'morxander.editcard:EditCard:1.0.1'
+    implementation 'com.android.volley:volley:1.2.1'
 }
 
 // Allow references to generated code
