--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
         <activity
             android:name=".ui.screens.home.agricanservices.order.confirm_order.PayActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat">
+            android:theme="@style/Theme.Agrican">
         </activity>
     </application>
 
