--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,7 @@ dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     implementation 'morxander.editcard:EditCard:1.0.1'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.github.SteliosPapamichail:CreditCardHelper:v1.0.0'
 }
 
 // Allow references to generated code
