--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Dfile.encoding\=UTF-8
+#org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xmx2560m
 
 android.enableJetifier=true
