--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -130,6 +131,10 @@ dependencies {
     implementation 'morxander.editcard:EditCard:1.0.1'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.SteliosPapamichail:CreditCardHelper:v1.0.0'
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:32.2.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
 
 // Allow references to generated code
