--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,8 +134,9 @@ dependencies {
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:32.2.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.android.gms:play-services-analytics:18.0.3'
 }
 
 // Allow references to generated code
