--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,5 @@ plugins {
     id 'com.google.dagger.hilt.android' version '2.44' apply false
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
     id 'com.google.gms.google-services' version '4.3.15' apply false
+    id'com.google.firebase.crashlytics' version "2.9.8" apply false
 }
